force-app/main/default/objects/CurrencyExchange__mdt/fields/AllOrNone__c.field-meta.xml
<CustomField>
    <fullName>AllOrNone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllOrNone</label>
    <type>Checkbox</type>
</CustomField>