force-app/main/default/objects/CurrencyExchange__mdt/fields/ConversionRate_Index__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate_Index__c</fullName>
    <label>ConversionRate_Index</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>