force-app/main/default/objects/CurrencyExchange__mdt/fields/DecimalPlaces__c.field-meta.xml
<CustomField>
    <fullName>DecimalPlaces__c</fullName>
    <label>DecimalPlaces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>