force-app/main/default/objects/CurrencyExchange__mdt/fields/IsoCode_Index__c.field-meta.xml
<CustomField>
    <fullName>IsoCode_Index__c</fullName>
    <label>IsoCode Index</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>